test/zinc_source/compile_errors/annotations/08_type_alternative_mismatch.zn
// expected-error: parameter 'x' expects a compatible 'i32\|f32' value
fn keep_specific(x: i32 | f32) {
    return x
}

fn main() {
    print(keep_specific("nope"))
}
